--- a/proj.win32/Glory.vcxproj.filters
+++ b/proj.win32/Glory.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="..\Classes\Startscene.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\client.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -75,6 +78,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Startscene.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\client.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
