--- a/proj.win32/Glory.vcxproj.filters
+++ b/proj.win32/Glory.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="..\Classes\Hero.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\SkillKinds.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -81,6 +84,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\Hero.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\SkillKinds.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
