--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ proj.win32/Debug.win32
 *Debug.win32*/
 proj.win32/.vs
 proj.win32/Release.win32
+server/Debug
+server/Release
+server/server/Debug
+server/server/Release
+server/.vs
