--- a/proj.win32/Glory.vcxproj
+++ b/proj.win32/Glory.vcxproj
@@ -152,6 +152,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\GameScene.cpp" />
+    <ClCompile Include="..\Classes\gvy.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\HelpScene.cpp" />
     <ClCompile Include="..\Classes\Hero.cpp" />
@@ -160,12 +161,14 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClCompile Include="..\Classes\SkillClass.cpp" />
     <ClCompile Include="..\Classes\SkillKinds.cpp" />
     <ClCompile Include="..\Classes\Startscene.cpp" />
+    <ClCompile Include="..\Classes\TowerClass.cpp" />
     <ClCompile Include="..\Classes\UnitClass.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\GameScene.h" />
+    <ClInclude Include="..\Classes\Gv.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\helper.h" />
     <ClInclude Include="..\Classes\HelpScene.h" />
@@ -175,6 +178,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClInclude Include="..\Classes\skillClass.h" />
     <ClInclude Include="..\Classes\SkillKinds.h" />
     <ClInclude Include="..\Classes\Startscene.h" />
+    <ClInclude Include="..\Classes\TowerClass.h" />
     <ClInclude Include="..\Classes\UnitClass.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
