--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ cocos2d/
 proj.win32/Debug.win32
 *Debug.win32*/
 proj.win32/.vs
+proj.win32/Release.win32
+server/.vs
+server/Debug
+Resources/log2.txt
+server/Release
+server/server
