--- a/proj.win32/Glory.vcxproj.filters
+++ b/proj.win32/Glory.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="..\Classes\GlobalVal.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\control.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -105,6 +108,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\GlobalVal.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\control.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
